--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <img src="./logo.png" alt="easyShare logo" class="logo">
+    <img src="./public/img/logo.png" alt="easyShare logo" class="logo">
     <section class="upload-container">
         <form action="">
             <div class="drop-zone">
